--- a/front/addpage/index.html
+++ b/front/addpage/index.html
@@ -29,10 +29,7 @@
       <div class="BODY">
         <div class="add-button" id="addButton"><img class="vector-2" src="img/PlusIcon.svg" /></div>
         <div id="modalBackground" class="modal-background">
-          <!-- 모달 내용 -->
-          <div class="modal-content">
-            <iframe src="../setaddpage/index.html" frameborder="0"></iframe>
-          </div>
+            <iframe id="popupIframe" src="about:blank" frameborder="0"></iframe>
         </div>
         <div class="LIST">
           <div class="overlap">
