--- a/front/addpage/index.html
+++ b/front/addpage/index.html
@@ -12,37 +12,25 @@
     <div class="CONTAINER">
       <div class="HEAD">
         <div class="text-wrapper">TODO LIST</div>
-        <header class="header">
-          <div class="search">
-            <input class="search-note" placeholder="Search note..." type="text" />
-            <img class="vector" src="img/FindIcon.svg" />
-          </div>
-          <div class="select">
-            <div class="content">
-              <div class="all">ALL</div>
-              <img class="chevron-top" src="img/chevron-top.png" />
-            </div>
-          </div>
-          <div class="color-scheme"><img class="img" src="img/NightModeIcon.svg" /></div>
-        </header>
       </div>
       <div class="BODY">
-        <div class="add-button" id="addButton"><img class="vector-2" src="img/PlusIcon.svg" /></div>
-        <div id="modalBackground" class="modal-background">
-            <iframe id="popupIframe" src="about:blank" frameborder="0"></iframe>
+        <div class="add-button" id="addButton">
+          <img class="vector-2" src="img/PlusIcon.svg" />
         </div>
-        <div class="LIST">
+        <div id="modalBackground" class="modal-background">
+          <iframe id="popupIframe" src="about:blank" frameborder="0"></iframe>
+        </div>
+        <div class="LIST" id="listContainer">
           <div class="overlap">
             <div class="note">
-              <input type="checkbox" id="noteCheckbox" class="note-checkbox" />
+              <input type="checkbox" class="note-checkbox" />
               <label class="note-label">NOTE #1</label>
               <div class="options">
-                <img class="img-2 trash-icon" src="img/TrashIcon.svg" data-note-id="1" />
+                <img class="img-2 trash-icon" src="img/TrashIcon.svg" />
               </div>
             </div>
             <img class="line" src="img/line-1.svg" />
           </div>
-          <img class="line-2" src="img/line-2.svg" />
         </div>
         <div id="clearImage" class="clear-image">
           <img src="img/clear.svg" alt="Clear" />
