--- a/front/Listpage/src/listMain.html
+++ b/front/Listpage/src/listMain.html
@@ -18,7 +18,7 @@
 
     <div id="modalBackground" class="modal-background">
         <div class="popup">
-            <h2>할 일 추가</h2>
+            <h2 id="popupTitle">할 일 추가</h2>
             <input type="text" id="noteInput" placeholder="할 일을 입력하세요">
             <div class="popup-buttons">
                 <button id="applyButton">Apply</button>
