파일 오류 해결 테스트

--- a/front/Listpage/src/listMain.html
+++ b/front/Listpage/src/listMain.html
@@ -11,7 +11,7 @@
     <h1 class="title">TODO LIST</h1>
 
     <div id="listContainer" class="list-container">
-        <p id="emptyMessage" class="empty-message">오늘의 할일을 입력하세요</p>
+        <p id="emptyMessage" class="empty-message">목표가 비어있어요...</p>
     </div>
 
     <button id="addButton" class="add-button">+</button>
