--- a/front/Login/src/loginPage.html
+++ b/front/Login/src/loginPage.html
@@ -15,8 +15,8 @@
         <h1>Login</h1>
         <form>
             <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" placeholder="Enter your username"/>
+                <label for="UserAccountID">UserAccountID</label>
+                <input type="text" id="UserAccountID" name="UserAccountID" placeholder="Enter your UserAccountID"/>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
