--- a/front/Login/src/createAccountPage.html
+++ b/front/Login/src/createAccountPage.html
@@ -19,8 +19,8 @@
         <input type="text" id="name" name="name" placeholder="Enter your full name"/>
       </div>
       <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" name="username" placeholder="Enter your username"/>
+        <label for="UserAccountID">UserAccountID</label>
+        <input type="text" id="UserAccountID" name="UserAccountID" placeholder="Enter your UserAccountID"/>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
