백앤드+프론트엔드 프론트엔드든 static폴더 안에 있음

--- a/back/hello-sp-finish3/src/main/resources/static/listMain.html
+++ b/back/hello-sp-finish3/src/main/resources/static/listMain.html
@@ -2,18 +2,15 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TODO LIST</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style2.css" />
 </head>
 <body>
 <div class="container">
     <h1 class="title">TODO LIST</h1>
-
     <div id="listContainer" class="list-container">
         <p id="emptyMessage" class="empty-message">목표가 비어있어요...</p>
     </div>
-
     <button id="addButton" class="add-button">+</button>
 
     <div id="modalBackground" class="modal-background">
@@ -27,7 +24,6 @@
         </div>
     </div>
 </div>
-
-<script src="../../shared/main.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
