--- a/back/hello-sp-finish3/src/main/resources/static/createAccountPage.html
+++ b/back/hello-sp-finish3/src/main/resources/static/createAccountPage.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Create Account Page</title>
+  <title>Create Account</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 <div class="container">
-  <div class="logo-container">
-    <h1>TODO</h1>
-  </div>
   <div class="signup-container">
     <h1>Create Account</h1>
     <form id="signup-form">
       <div class="form-group">
         <label for="name">Full Name</label>
-        <input type="text" id="name" name="name" placeholder="Enter your full name" />
+        <input type="text" id="name" name="name" />
       </div>
       <div class="form-group">
         <label for="UserAccountID">UserAccountID</label>
-        <input type="text" id="UserAccountID" name="UserAccountID" placeholder="Enter your UserAccountID" />
+        <input type="text" id="UserAccountID" name="UserAccountID" />
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Enter your password" />
+        <input type="password" id="password" name="password" />
       </div>
       <div class="form-group">
         <button type="submit">Sign Up</button>
@@ -32,6 +28,6 @@
     </form>
   </div>
 </div>
-<script src="../../shared/main.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
