--- a/back/hello-sp-finish3/src/main/resources/static/loginPage.html
+++ b/back/hello-sp-finish3/src/main/resources/static/loginPage.html
@@ -2,7 +2,6 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
     <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -16,11 +15,11 @@
         <form>
             <div class="form-group">
                 <label for="UserAccountID">UserAccountID</label>
-                <input type="text" id="UserAccountID" name="UserAccountID" placeholder="Enter your UserAccountID" />
+                <input type="text" id="UserAccountID" name="UserAccountID" />
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" placeholder="Enter your password" />
+                <input type="password" id="password" name="password" />
             </div>
             <div class="form-group">
                 <button type="submit">Login</button>
@@ -32,6 +31,6 @@
         </form>
     </div>
 </div>
-<script src="../../shared/main.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
